@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: September 17, 2008</p>
+      <p>Last Updated: September 18, 2008</p>
     </td>
   </tr>
 </table>
@@ -1111,6 +1111,7 @@ nuttx-0.3.15 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Complete the basic port of the NXP LPC2148 on the mcu123.com board.
 	  The basic port includes successful booting, serial console and succesfully
 	  passing the examples/ostest.
+	* ARM architectures now support drivers/lowconsole.c
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
