@@ -135,7 +135,11 @@ void up_initialize(void)
 
   /* Initialize the serial device driver */
 
+#ifdef CONFIG_USE_SERIALDRIVER
   up_serialinit();
+#elif defined(CONFIG_DEV_LOWCONSOLE)
+  lowconsole_init();
+#endif
 
   /* Initialize the netwok */
 
