@@ -145,6 +145,8 @@ CONFIG_HAVE_LIBM=n
 # CONFIG_JULIAN_TIME - Enables Julian time conversions
 # CONFIG_DEV_CONSOLE - Set if architecture-specific logic
 #   provides /dev/console.  Enables stdout, stderr, stdin.
+# CONFIG_DEV_LOWCONSOLE - Use the simple, low-level serial console
+#   driver (minimul support)
 #
 CONFIG_EXAMPLE=uip
 CONFIG_DEBUG=n
@@ -159,6 +161,7 @@ CONFIG_START_MONTH=2
 CONFIG_START_DAY=13
 CONFIG_JULIAN_TIME=n
 CONFIG_DEV_CONSOLE=y
+CONFIG_DEV_LOWCONSOLE=n
 
 #
 # The following can be used to disable categories of
